--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,4 @@
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
+@import 'page.defaults';
 @import 'table';
