--- a/src/sass/page.defaults.scss
+++ b/src/sass/page.defaults.scss
@@ -1,2 +1,2 @@
-html,body,header,main,footer,section,aside,h1,h2,h3,h4,p{margin:0;padding:0;}
-ul{margin:0;}
+// html,body,header,main,footer,section,aside,h1,h2,h3,h4,p{margin:0;padding:0;}
+// ul{margin:0;}
